--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
             <label for="line-color-inp">Line Color:</label>
             <input type="color" name="line-color-inp" id="line-color-inp" value="#000000">
         </p>
+        <p>
+            <label for="line-width-inp">Line Width:</label>
+            <input type="number" name="line-color-inp" id="line-width-inp" value="1">
+        </p>
 
-        <canvas width="600" height="400"></canvas>
+        <canvas id="canvas" width="600" height="400"></canvas>
         <script src="js/app.js"></script>
     </body>
 </html>
